/*
 * This file is part of the RonDB REST API Server
 * Copyright (c) 2022 Hopsworks AB
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, version 3.
 *
 * This program is distributed in the hope that it will be useful, but
 * WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
 * General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program. If not, see <http://www.gnu.org/licenses/>.
 */

syntax = "proto3";

option go_package = "./../grpcsrv";

message FilterProto {
  string Column = 1;
  bytes Value = 2;
}

message ReadColumnProto {
  string Column = 1;
  optional string DataReturnType = 2;
}

message PKReadRequestProto {
  string DB = 1;
  string Table = 2;
  repeated FilterProto Filters = 3;
  repeated ReadColumnProto ReadColumns = 4;
  optional string OperationID = 5;
}

message PKReadResponseProto {
  int32 resp = 1;
}

message BatchRequestProto {
  int32 req = 1;
}

message BatchResponseProto {
  int32 resp = 1;
}

service RonDBRestServer {
  rpc PKRead(PKReadRequestProto) returns (PKReadResponseProto);
  rpc Batch(BatchRequestProto) returns (BatchResponseProto);
}

